--- a/mscore/libmscore/CMakeLists.txt
+++ b/mscore/libmscore/CMakeLists.txt
@@ -40,6 +40,7 @@ add_library (
       utils.cpp velo.cpp volta.cpp xml.cpp mscore.cpp
       undo.cpp cmd.cpp scorefile.cpp revisions.cpp
       check.cpp input.cpp icon.cpp ossia.cpp
+      dsp.cpp tempo.cpp sig.cpp pos.cpp fraction.cpp
       )
 set_target_properties (
       libmscore
