--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -214,18 +214,18 @@ IF(BUILD_JACK)
            IF("$ENV{PROCESSOR_ARCHITEW6432}" STREQUAL "")
               IF($ENV{PROCESSOR_ARCHITECTURE} STREQUAL "x86")
                  # "pure" 32-bit environment
-                 set (JACK_INCDIR "C:/Program Files/Jack v1.9.7/includes")
-                 set (JACK_LIB "C:/Program Files/Jack v1.9.7/lib/libjack.a")
+                 set (JACK_INCDIR "C:/Program Files/Jack/includes")
+                 set (JACK_LIB "C:/Program Files/Jack/lib/libjack.a")
               ELSE($ENV{PROCESSOR_ARCHITECTURE} STREQUAL "x86")
                  # "pure" 64-bit environment
-                 set (JACK_INCDIR "C:/Program Files (x86)/Jack v1.9.7/includes")
-                 set (JACK_LIB "C:/Program Files (x86)/Jack v1.9.7/lib/libjack.a")
+                 set (JACK_INCDIR "C:/Program Files (x86)/Jack/includes")
+                 set (JACK_LIB "C:/Program Files (x86)/Jack/lib/libjack.a")
               ENDIF($ENV{PROCESSOR_ARCHITECTURE} STREQUAL "x86")
            ELSE("$ENV{PROCESSOR_ARCHITEW6432}" STREQUAL "")
               IF("$ENV{PROCESSOR_ARCHITECTURE}" STREQUAL "x86")
                  # 32-bit program running with an underlying 64-bit environment
-                 set (JACK_INCDIR "C:/Program Files (x86)/Jack v1.9.7/includes")
-                 set (JACK_LIB "C:/Program Files (x86)/Jack v1.9.7/lib/libjack.a")
+                 set (JACK_INCDIR "C:/Program Files (x86)/Jack/includes")
+                 set (JACK_LIB "C:/Program Files (x86)/Jack/lib/libjack.a")
               ELSE("$ENV{PROCESSOR_ARCHITECTURE}" STREQUAL "x86")
                  # theoretically impossible case...
               ENDIF("$ENV{PROCESSOR_ARCHITECTURE}" STREQUAL "x86")
@@ -311,15 +311,19 @@ add_custom_command(
 set(CMAKE_CXX_FLAGS_DEBUG   "")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
 
-if (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
-      set (FLAGS -DQT_DEBUG)
-else (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+      if (MINGW)
+            set(FLAGS -DQT_DEBUG -DQT_DLL)
+      else (MINGW)
+            set (FLAGS -DQT_DEBUG)
+      endif (MINGW) 
+else (CMAKE_BUILD_TYPE STREQUAL "Debug")
       if (MINGW)
             set(FLAGS -O2 -DNDEBUG -DQT_DLL -DQT_NO_DEBUG)
       else (MINGW)
             set(FLAGS -O2 -DNDEBUG -DQT_NO_DEBUG)
       endif (MINGW)
-endif (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
+endif (CMAKE_BUILD_TYPE STREQUAL "Debug")
 
 if (${CMAKE_CXX_COMPILER_ID} EQUAL "Clang")
       add_custom_command(
