fix #14158: no qt bindings for plugin framework

--- a/mscore/config.h.in
+++ b/mscore/config.h.in
@@ -27,6 +27,7 @@
 
 #cmakedefine HAS_MIDI
 #cmakedefine STATIC_SCRIPT_BINDINGS
+#cmakedefine BUILD_SCRIPTGEN
 #cmakedefine HAS_AUDIOFILE
 #cmakedefine USE_SSE
 
