--- a/trunk/mscore/mtest/CMakeLists.txt
+++ b/trunk/mscore/mtest/CMakeLists.txt
@@ -30,6 +30,10 @@ add_executable(mtest
       ${mocs}
       mtest.cpp
       testnote.cpp
+      testmidi.cpp
+      ../mscore/exportmidi.cpp
+      ../mscore/importmidi.cpp
+      ../mscore/midifile.cpp
       )
 
 target_link_libraries(mtest
