Add drumset file for french drums notation see #14340 Change default drumset folder to "templates" dir Add UK Brass Band template Remove subbeam button Read and ignore "pos" Partly fix #10552 : no more crash on undo, dynamic created

--- a/branches/mscore-0-9-6/mscore/share/templates/CMakeLists.txt
+++ b/branches/mscore-0-9-6/mscore/share/templates/CMakeLists.txt
@@ -43,6 +43,8 @@ install(FILES
       Lead\ Sheet.mscx
       Piano.mscx
       Jazz\ Lead\ Sheet.mscz
+      UK\ Brass\ Band.mscz
+      drumset_fr.drm
       DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}templates
       )
 
