new iteration of property system

--- a/mscore/mscore/CMakeLists.txt
+++ b/mscore/mscore/CMakeLists.txt
@@ -81,7 +81,7 @@ QT4_WRAP_CPP (mocs
       bendcanvas.h tremolobarprop.h tremolobarcanvas.h
       drumtools.h texteditor.h texttools.h edittools.h pianotools.h editpitch.h
       editstringdata.h editraster.h mediadialog.h chordeditor.h chordview.h album.h layer.h
-      webpage.h inspector.h
+      webpage.h inspector.h inspectorBase.h inspectorBeam.h
       ${OMR_MOCS}
       )
 
@@ -170,6 +170,7 @@ add_executable ( ${ExecutableName}
       layer.cpp jumpproperties.cpp selectdialog.cpp
       propertymenu.cpp imageproperties.cpp shortcut.cpp bb.cpp
       midifile.cpp inspector.cpp dragelement.cpp svggenerator.cpp
+      inspectorBase.cpp inspectorBeam.cpp
       ${OMR_FILES}
       ${AUDIO}
       )
