change CMAKE_BUILD_TYPE to capitals on Windows

--- a/branches/mscore-0-9-6/mscore/mscore/CMakeLists.txt
+++ b/branches/mscore-0-9-6/mscore/mscore/CMakeLists.txt
@@ -204,19 +204,19 @@ if (MINGW)
       PROPERTIES generated true
       )
    # Windows: add -mconsole to LINK_FLAGS to get a console window for debug output
-   if(CMAKE_BUILD_TYPE MATCHES "Debug")
+   if(CMAKE_BUILD_TYPE MATCHES "DEBUG")
      set_target_properties( mscore
         PROPERTIES
            COMPILE_FLAGS "-include ${PROJECT_BINARY_DIR}/all.h ${QT_DEFINITIONS} -DQT_SVG_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_CORE_LIB -DQT_SCRIPT_LIB"
            LINK_FLAGS "${PROJECT_BINARY_DIR}/resfile.o -mwindows -mconsole -L ${CROSSQT}/lib"
         )
-   else(CMAKE_BUILD_TYPE MATCHES "Debug")
+   else(CMAKE_BUILD_TYPE MATCHES "DEBUG")
      set_target_properties( mscore
           PROPERTIES
              COMPILE_FLAGS "-include ${PROJECT_BINARY_DIR}/all.h ${QT_DEFINITIONS} -DQT_SVG_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_CORE_LIB -DQT_SCRIPT_LIB"
              LINK_FLAGS "-Wl,-S ${PROJECT_BINARY_DIR}/resfile.o -mwindows -L ${CROSSQT}/lib"
           )
-   endif(CMAKE_BUILD_TYPE MATCHES "Debug")
+   endif(CMAKE_BUILD_TYPE MATCHES "DEBUG")
 
    target_link_libraries(mscore
       fluid
